--- a/package.json
+++ b/package.json
@@ -53,8 +53,9 @@
     "chai-string": "^1.2.0",
     "mocha": "^2.5.3",
     "mocha-sinon": "^1.1.5",
-    "sinon-chai": "^2.8.0",
-    "sinon": "^1.17.4"
+    "nock": "^9.2.3",
+    "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0"
   },
   "scripts": {
     "test": "mocha"
