--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   },
   "main": "index.js",
   "dependencies": {
-    "base-store": "^0.4.4",
     "cardinal": "^1.0.0",
     "colors": "^1.1.2",
     "figures": "^1.7.0",
@@ -37,25 +36,16 @@
     "jsonfile": "^2.3.1",
     "lodash": "^4.13.1",
     "minimist": "^1.2.0",
-    "node-status": "^1.0.0",
     "open": "0.0.5",
-    "prompt-sync": "^4.1.4",
-    "readline-sync": "^1.4.4",
     "request": "^2.81.0",
     "swagger-inline": "0.0.8",
     "swagger-parser": "^3.4.1",
-    "swagger2-to-postman": "^1.1.0",
     "uslug": "^1.0.4",
     "yamljs": "^0.2.8"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-string": "^1.2.0",
     "mocha": "^2.5.3",
-    "mocha-sinon": "^1.1.5",
-    "nock": "^9.2.3",
-    "sinon": "^1.17.4",
-    "sinon-chai": "^2.8.0"
+    "nock": "^9.2.3"
   },
   "scripts": {
     "test": "mocha"
