--- a/package.json
+++ b/package.json
@@ -44,10 +44,18 @@
     "yamljs": "^0.2.8"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.11.0",
     "mocha": "^2.5.3",
-    "nock": "^9.2.3"
+    "nock": "^9.2.3",
+    "prettier": "^1.12.1"
   },
   "scripts": {
+    "lint": "eslint -f unix .",
+    "prettier": "prettier --list-different \"./**/**.js\"",
+    "pretest": "npm run lint && npm run prettier",
     "test": "mocha"
   },
   "license": "see LICENSE file"
