Send code coverage to code climate

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,8 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       # run tests!
-      # - run: curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-      # - run: chmod +x ./cc-test-reporter
-      # - run: ./cc-test-reporter before-build
+      - run: curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+      - run: chmod +x ./cc-test-reporter
+      - run: ./cc-test-reporter before-build
       - run: npm test
-      # - run: ./cc-test-reporter after-build -t lcov --exit-code $?
+      - run: ./cc-test-reporter after-build -t lcov --exit-code $?
