--- a/package.json
+++ b/package.json
@@ -27,21 +27,9 @@
   },
   "main": "index.js",
   "dependencies": {
-    "cardinal": "^1.0.0",
     "colors": "^1.1.2",
-    "figures": "^1.7.0",
-    "glob": "^7.1.0",
-    "inquirer": "^1.2.1",
-    "json2yaml": "^1.1.0",
-    "jsonfile": "^2.3.1",
-    "lodash": "^4.13.1",
     "minimist": "^1.2.0",
-    "open": "0.0.5",
-    "request": "^2.81.0",
-    "swagger-inline": "0.0.8",
-    "swagger-parser": "^3.4.1",
-    "uslug": "^1.0.4",
-    "yamljs": "^0.2.8"
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
