--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "colors": "^1.1.2",
     "config": "^1.30.0",
     "minimist": "^1.2.0",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.5"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
