--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "colors": "^1.1.2",
     "config": "^1.30.0",
+    "gray-matter": "^4.0.1",
     "minimist": "^1.2.0",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.5"
