--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "config": "^1.30.0",
     "gray-matter": "^4.0.1",
     "minimist": "^1.2.0",
+    "oas": "^0.6.7",
     "request": "^2.81.0",
     "request-promise-native": "^1.0.5"
   },
