--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "colors": "^1.1.2",
     "config": "^1.30.0",
+    "editor": "^1.0.0",
     "gray-matter": "^4.0.1",
     "minimist": "^1.2.0",
     "oas": "^0.6.7",
@@ -56,10 +57,10 @@
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 40,
+        "branches": 70,
         "functions": 80,
-        "lines": 80,
-        "statements": 75
+        "lines": 90,
+        "statements": 90
       }
     }
   }
