--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
   "dependencies": {
     "colors": "^1.1.2",
     "config": "^1.30.0",
+    "configstore": "^4.0.0",
     "editor": "^1.0.0",
     "gray-matter": "^4.0.1",
+    "isemail": "^3.1.3",
     "minimist": "^1.2.0",
     "oas": "^0.8.8",
+    "read": "^1.0.7",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5"
   },
