--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "isemail": "^3.1.3",
     "minimist": "^1.2.0",
     "oas": "^0.8.8",
+    "opn": "^5.4.0",
     "read": "^1.0.7",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5"
