If an OAS is not supplied, attempt to discover one in the root dir.

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "scripts": {
     "lint": "eslint -f unix .",
     "prettier": "prettier --list-different \"./**/**.js\"",
+    "prettier:write": "prettier --write \"./**/**.js\"",
     "pretest": "npm run lint && npm run prettier",
     "test": "jest --coverage"
   },
