--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "gray-matter": "^4.0.1",
     "isemail": "^3.1.3",
     "minimist": "^1.2.0",
-    "opn": "^6.0.0",
-    "read": "^1.0.7",
     "oas": "0.8.15",
+    "opn": "^6.0.0",
+    "prompts": "^2.1.0",
+    "read": "^1.0.7",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5"
   },
