--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "main": "index.js",
   "dependencies": {
     "colors": "^1.1.2",
+    "command-line-usage": "^6.0.2",
     "config": "^3.1.0",
     "configstore": "^5.0.0",
     "editor": "^1.0.0",
