--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "enquirer": "^2.3.0",
     "gray-matter": "^4.0.1",
     "isemail": "^3.1.3",
-    "minimist": "^1.2.0",
     "oas": "0.8.15",
     "opn": "^6.0.0",
     "read": "^1.0.7",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.5"
+    "request-promise-native": "^1.0.5",
+    "table-layout": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
