Preferring readme.com over readme.io

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "ReadMe <support@readme.io> (http://readme.io)",
+  "author": "ReadMe <support@readme.io> (https://readme.com)",
   "name": "rdme",
   "description": "ReadMe's API CLI",
   "bin": {
