--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "cli-table": "^0.3.1",
     "colors": "^1.1.2",
     "command-line-args": "^5.1.1",
     "command-line-usage": "^6.0.2",
