--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,9 +38,16 @@ jobs:
       - image: circleci/node:10
         environment: *environment
 
+  node12:
+    <<: *default
+    docker:
+      - image: circleci/node:12
+        environment: *environment
+
 workflows:
   version: 2
   build:
     jobs:
       - node8
       - node10
+      - node12
