--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "gray-matter": "^4.0.1",
     "isemail": "^3.1.3",
     "oas": "0.8.16",
-    "opn": "^6.0.0",
+    "open": "^6.4.0",
     "read": "^1.0.7",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
