--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "read": "^1.0.7",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
+    "semver": "^6.3.0",
     "table-layout": "^1.0.0"
   },
   "devDependencies": {
