--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@readme/eslint-config": "^1.3.1",
+    "conventional-changelog-cli": "^2.0.31",
     "eslint": "^6.2.0",
     "jest": "^24.7.1",
     "nock": "^11.3.3",
@@ -56,6 +57,7 @@
     "lint": "eslint .",
     "pretest": "npm run lint && npm run prettier",
     "prettier": "prettier --list-different --write \"./**/**.js\"",
+    "release": "conventional-changelog -i CHANGELOG.md -s",
     "test": "jest --coverage"
   },
   "jest": {
