feat: drop support for node 8

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "url": "https://github.com/readmeio/rdme/issues"
   },
   "main": "index.js",
+  "engines": {
+    "node": ">=10"
+  },
   "dependencies": {
     "cli-table": "^0.3.1",
     "colors": "^1.1.2",
