style: updating eslintrc for the new jest formatting capabilities

--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -5,14 +5,11 @@
   },
   "rules": {
     "jest/expect-expect": [
-      "warn",
+      "error",
       {
         "assertFunctionNames": [
           "expect",
-
-          // This rule doesn't recognize nock assertions.
-          // https://github.com/jest-community/eslint-plugin-jest/issues/471
-          "nock"
+          "nock.*.reply"
         ]
       }
     ]
