test: updating some wonky test assertions

--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -9,7 +9,7 @@
       {
         "assertFunctionNames": [
           "expect",
-          "nock.*.reply"
+          "nock.**.reply"
         ]
       }
     ]
