--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "eslint": "^6.2.0",
     "jest": "^25.1.0",
     "nock": "^12.0.0",
-    "prettier": "^1.12.1"
+    "prettier": "^2.0.1"
   },
   "scripts": {
     "lint": "eslint .",
@@ -75,5 +75,6 @@
         "statements": 90
       }
     }
-  }
+  },
+  "prettier": "@readme/eslint-config/prettier"
 }
