--- a/package.json
+++ b/package.json
@@ -64,9 +64,6 @@
     "test": "jest --coverage"
   },
   "jest": {
-    "setupFiles": [
-      "./test/set-node-env"
-    ],
     "coverageThreshold": {
       "global": {
         "branches": 80,
@@ -74,7 +71,13 @@
         "lines": 90,
         "statements": 90
       }
-    }
+    },
+    "setupFiles": [
+      "./__tests__/set-node-env"
+    ],
+    "testPathIgnorePatterns": [
+      "./__tests__/set-node-env"
+    ]
   },
   "prettier": "@readme/eslint-config/prettier"
 }
