chore: directory spring cleaning (#327)
* feat: dropping support for node 10

* test: fixing a broken test on node 14

* ci: updating the ci workflow to use node 12+

* ci: upgrading the codeql workflow to the latest way it configs

* chore(deps-dev): upgrading jest to v27

* chore(deps-dev): upgrading code styling dev deps

* chore(deps-dev): upgrading nock to the latest version

* chore: removing a swagger file that shouldnt be in the root dir?

* ci: updating codeql to run on `main` not `master`

* chore: updating the license to be 2021

* chore: renaming the test directory to `__tests__`

* chore: various dotfile cleanup

* chore: moving the codebase into a `src/` directory structure

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "^12 || ^14 || ^16"
   },
   "bin": {
-    "rdme": "rdme.js"
+    "rdme": "bin/rdme"
   },
   "tags": [
     "api",
@@ -63,9 +63,6 @@
     "test": "jest --coverage"
   },
   "jest": {
-    "setupFiles": [
-      "./test/set-node-env"
-    ],
     "coverageThreshold": {
       "global": {
         "branches": 80,
@@ -73,7 +70,13 @@
         "lines": 90,
         "statements": 90
       }
-    }
+    },
+    "setupFiles": [
+      "./__tests__/set-node-env"
+    ],
+    "testPathIgnorePatterns": [
+      "./__tests__/set-node-env"
+    ]
   },
   "prettier": "@readme/eslint-config/prettier"
 }
