--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gray-matter": "^4.0.1",
     "isemail": "^3.1.3",
     "oas": "^3.4.2",
+    "oas-normalize": "^2.3.1",
     "open": "^7.0.0",
     "read": "^1.0.7",
     "request": "^2.88.0",
