test: cleaning up the docs test a bit

--- a/__tests__/.eslintrc
+++ b/__tests__/.eslintrc
@@ -9,6 +9,7 @@
       {
         "assertFunctionNames": [
           "expect",
+          "getNockWithVersionHeader.**.reply",
           "nock.**.reply"
         ]
       }
