--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "enquirer": "^2.3.0",
     "gray-matter": "^4.0.1",
     "isemail": "^3.1.3",
+    "node-fetch": "^2.6.1",
     "oas": "^13.0.1",
     "oas-normalize": "^3.0.2",
     "open": "^8.2.1",
