--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "configstore": "^5.0.0",
     "editor": "^1.0.0",
     "enquirer": "^2.3.0",
+    "form-data": "^2.3.3",
     "gray-matter": "^4.0.1",
     "isemail": "^3.1.3",
+    "node-fetch": "^2.6.1",
     "oas": "^14.0.0",
     "oas-normalize": "^3.0.4",
     "open": "^8.2.1",
     "read": "^1.0.7",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.5",
     "semver": "^7.0.0",
     "table-layout": "^1.0.0"
   },
