docs: update npm tags

--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "tags": [
     "api",
     "apis",
+    "openapi",
     "swagger",
-    "open api initiative",
-    "open api spec",
+    "openapi initiative",
+    "openapi specification",
+    "openapi spec",
+    "openapi document",
     "oai",
     "oas",
     "apidoc",
