--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -29,3 +29,7 @@ updates:
       - dependency-name: node-fetch
         versions:
           - ">= 3"
+      # node-fetch is now an ESM package and can't be used here without a rewrite.
+      - dependency-name: table-layout
+        versions:
+          - ">= 3"
