--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,6 @@
   "extends": ["@readme/eslint-config"],
   "root": true,
   "rules": {
-    "no-console": "off",
-    "sonarjs/no-nested-template-literals": "off"
+    "no-console": "off"
   }
 }
