--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "url": "https://github.com/readmeio/rdme/issues"
   },
   "dependencies": {
+    "chalk": "^4.1.2",
     "cli-table": "^0.3.1",
-    "colors": "^1.1.2",
     "command-line-args": "^5.2.0",
     "command-line-usage": "^6.0.2",
     "config": "^3.1.0",
