--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,7 @@ jobs:
 
       - name: Run tests
         run: npm test
+        env:
+          # `chalk` has troubles with color detection while on CI.
+          # https://github.com/chalk/supports-color/issues/106
+          FORCE_COLOR: 1
