--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Run tests
         run: npm test
         env:
-          # `chalk` has troubles with color detection while on CI and also in how it's used within our tests.
+          # `chalk` has troubles with color detection while on CI.
           # https://github.com/chalk/supports-color/issues/106
           FORCE_COLOR: 1
