ci: update eslint config to warn about console.log calls
also adding an explanatory comment

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,16 @@
   "extends": ["@readme/eslint-config"],
   "root": true,
   "rules": {
-    "no-console": "off"
+    /**
+     * This is a small rule to prevent us from using console.log() statements in our commands.
+     *
+     * We've had troubles in the past where our test coverage required us to use Jest mocks for
+     * console.log() calls, hurting our ability to write resilient tests and easily debug issues.
+     *
+     * We should be returning Promise-wrapped values in our main command functions
+     * so we can write robust tests and take advantage of `bin/rdme`,
+     * which we use for printing function outputs and returning correct exit codes.
+     */
+    "no-console": ["warn", { "allow": ["info", "warn"] }]
   }
 }
