refactor: commands into command classes (#424)
* fix: quirks with version commands not always handling errors properly

* fix: use the right accessor for getting config data

* refactor: commands into command classes

* fix: typos

* fix: we know the name of the login command

* fix: reverting an unnecessary change

* fix: pr feedback

* fix: bring back snapshot

* fix: pulling some snapshots that have color in them as they're causing flaky tests

* test: tweaks

* fix: removing a dupe color config

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,12 @@
   "root": true,
   "rules": {
     /**
+     * Because our command classes have a `run` method that might not always call `this` we need to
+     * explicitly exclude `run` from this rule.
+     */
+    "class-methods-use-this": ["error", { "exceptMethods": ["run"] }],
+
+    /**
      * This is a small rule to prevent us from using console.log() statements in our commands.
      *
      * We've had troubles in the past where our test coverage required us to use Jest mocks for
