--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "parse-link-header": "^2.0.0",
     "read": "^1.0.7",
     "semver": "^7.0.0",
-    "tmp-promise": "^3.0.2"
+    "tmp-promise": "^3.0.2",
+    "update-notifier": "^5.1.0"
   },
   "devDependencies": {
     "@readme/eslint-config": "^8.0.2",
