feat: adding an rdme-specific user agent to all api calls

--- a/__tests__/.eslintrc
+++ b/__tests__/.eslintrc
@@ -1,20 +1,3 @@
 {
-  "extends": ["@readme/eslint-config/testing"],
-  "env": {
-    "jest": true
-  },
-  "rules": {
-    "jest/expect-expect": [
-      "error",
-      {
-        "assertFunctionNames": [
-          "expect",
-          "getNockWithVersionHeader.**.reply",
-          "nock.**.reply"
-        ]
-      }
-    ],
-
-    "jest/no-conditional-expect": "off"
-  }
+  "extends": ["@readme/eslint-config/testing"]
 }
