--- a/.github/workflows/ci-action.yml
+++ b/.github/workflows/ci-action.yml
@@ -3,7 +3,7 @@ name: GitHub Action Test
 on: [push]
 
 jobs:
-  build:
+  action-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.4.0
@@ -11,4 +11,4 @@ jobs:
       - name: Run GitHub Action command test
         uses: ./
         with:
-          command: 'validate __tests__/__fixtures__/ref-oas/petstore.json'
+          rdme: 'validate __tests__/__fixtures__/ref-oas/petstore.json'
