--- a/action.yml
+++ b/action.yml
@@ -19,5 +19,6 @@ runs:
       run: npm install --production --silent
       shell: bash
       working-directory: ${{ github.action_path }}
-    - run: ${{ github.action_path }}/bin/rdme ${{ inputs.rdme }}
+    - run: bin/rdme ${{ inputs.rdme }}
       shell: bash
+      working-directory: ${{ github.action_path }}
