--- a/action.yml
+++ b/action.yml
@@ -3,10 +3,9 @@ author: ReadMe
 branding:
   color: blue
   icon: book-open
-description: 'Update your ReadMe developer hubs in a CI environment.'
 inputs:
   rdme:
-    description: 'String containing command and arguments to pass into rdme'
+    description: String containing command and arguments to pass into rdme
     required: true
 runs:
   using: "composite"
@@ -14,7 +13,7 @@ runs:
     - name: setup node
       uses: actions/setup-node@v2
       with:
-        node-version: '16'
+        node-version: 16
     - name: Install rdme deps
       run: npm install --production --silent
       shell: bash
