revert: move this back
So interesting thing I discovered in this test run: https://github.com/kanadgupta/metrotransit-nextrip-oas/runs/5163683403?check_suite_focus=true#step:3:18

Even though this will look a bit messier in the user's action logs, this is the only way to ensure that the command runs in the user's GitHub repo :sad:

--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,5 @@ runs:
       shell: bash
       working-directory: ${{ github.action_path }}
     - name: Execute rdme command
-      run: bin/rdme ${{ inputs.rdme }}
+      run: ${{ github.action_path }}/bin/rdme ${{ inputs.rdme }}
       shell: bash
-      working-directory: ${{ github.action_path }}
