--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run tests
         run: npm test
 
-  action-test:
+  action:
     name: GitHub Action Dry Run
     runs-on: ubuntu-latest
     steps:
@@ -36,8 +36,8 @@ jobs:
       - name: Checkout external repo containing OpenAPI file
         uses: actions/checkout@v2.4.0
         with:
-          repository: readmeio/oas-examples
           path: oas-examples-repo
+          repository: readmeio/oas-examples
           token: ${{ secrets.OAS_EXAMPLES_READ }}
 
       - name: Run validate command on external repo
