chore: update workflow docs a bit

--- a/action.yml
+++ b/action.yml
@@ -6,15 +6,17 @@ branding:
 description: Update your ReadMe developer hubs in a CI environment.
 inputs:
   rdme:
-    description: String containing command and arguments to pass into rdme
+    description: Command to pass into rdme
     required: true
 runs:
   using: composite
   steps:
+    # This is so we can guarantee a version of npm that supports lockfile@2
     - name: setup node
       uses: actions/setup-node@v2
       with:
         node-version: 16
+    # When we add debug support, we should make this a conditional step, see RM-3545
     - name: Install rdme deps
       run: npm install --production --silent
       shell: bash
