--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,11 +40,12 @@ jobs:
           repository: readmeio/oas-examples
           token: ${{ secrets.OAS_EXAMPLES_READ }}
 
-      - name: Run `validate` command on external repo
+      - name: Run `validate` command
         uses: ./rdme-repo/
         with:
           rdme: validate oas-examples-repo/3.1/json/petstore.json
 
+      # Docs: https://rdme-test.readme.io
       - name: Run `openapi` command
         uses: ./rdme-repo/
         with:
