feat: add wrapper for GitHub Actions (#437)
* feat: add initial github action config

* ci: add gh action test

* test: refactor test to check for exact UA match

* feat: dynamically set user agent based on env

* chore: temporarily skip test suite

Our test bed is a bit broken right now and I should fix this up, but I just want to see how the GitHub Action test runs for the time being :grimacing:

* chore: silence npm i logs

* ci: restore tests, move action test to separate workflow file

* Update action.yml

* chore: update param names, job names

* fix: attempt to get npm install working properly

* chore: update loglevel

* chore: ok updating log level AGAIN

Once we add a debug option, I'll also update this line to reflect that!

* chore: set working directory instead

Docs: https://docs.github.com/en/actions/creating-actions/metadata-syntax-for-github-actions#runsstepsworking-directory

* test: attempt to get CI working again

* test: how about this?

* refactor: consolidate user-agent logic

* refactor: move path to `working_directory`

This way our logs look a little cleaner!

* chore: typo

* chore: remove unnecessary quotes

* chore: oops

* chore: does this look any cleaner?

* fix: try this

* revert: eh nvm

* chore: removing quotes in one last place

* revert: move this back

So interesting thing I discovered in this test run: https://github.com/kanadgupta/metrotransit-nextrip-oas/runs/5163683403?check_suite_focus=true#step:3:18

Even though this will look a bit messier in the user's action logs, this is the only way to ensure that the command runs in the user's GitHub repo :sad:

* ci: update test workflow to test it with another repo

* ci: will this work?

* ci: add a token that hopefully works

* chore: consolidate CI

* refactor: consolidate nock logic

* chore: small formatting tweaks

* ci: add upload step

* fix: see if chalk prints colors nicely with this env var

*

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   build:
+    name: Test Suite
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -22,3 +23,30 @@ jobs:
 
       - name: Run tests
         run: npm test
+
+  action:
+    name: GitHub Action Dry Run
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout GitHub Action
+        uses: actions/checkout@v2.4.0
+        with:
+          path: rdme-repo
+
+      - name: Checkout external repo containing OpenAPI file
+        uses: actions/checkout@v2.4.0
+        with:
+          path: oas-examples-repo
+          repository: readmeio/oas-examples
+          token: ${{ secrets.OAS_EXAMPLES_READ }}
+
+      - name: Run `validate` command
+        uses: ./rdme-repo/
+        with:
+          rdme: validate oas-examples-repo/3.1/json/petstore.json
+
+      # Docs: https://rdme-test.readme.io
+      - name: Run `openapi` command
+        uses: ./rdme-repo/
+        with:
+          rdme: openapi oas-examples-repo/3.1/json/petstore.json --key=${{ secrets.RDME_TEST_PROJECT_API_KEY }} --id=${{ secrets.RDME_TEST_PROJECT_API_SETTING }}
