docs: update Action metadata (#441)
* docs: update Action metadata

* docs: more copy edits per Spang

Co-Authored-By: sarahspangenberg <77357111+sarahspangenberg@users.noreply.github.com>

Co-authored-by: sarahspangenberg <77357111+sarahspangenberg@users.noreply.github.com>

--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,9 @@
-name: rdme
+name: rdme 🦉 Sync to ReadMe
 author: ReadMe
 branding:
   color: blue
   icon: book-open
-description: Update your ReadMe developer hubs in a CI environment.
+description: Sync OpenAPI (OAS) definitions and Markdown documentation from your GitHub repository to your ReadMe developer hub
 inputs:
   rdme:
     description: Command to pass into rdme
