--- a/action.yml
+++ b/action.yml
@@ -24,5 +24,5 @@ runs:
     - name: Execute rdme command
       run: ${{ github.action_path }}/bin/rdme ${{ inputs.rdme }}
       shell: bash
-      # env:
-      #   FORCE_COLOR: '1'
+      env:
+        FORCE_COLOR: '3'
