chore: temporarily run workflow on every push
We're going to revert this, but just want to confirm that our changes work!

Co-Authored-By: Ellie Rossuck <48635728+ellierossuck@users.noreply.github.com>

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,10 +1,7 @@
 name: Sync `documentation` directory to ReadMe
 
 # Run workflow for every push to the `main` branch
-on:
-  push:
-    branches:
-      - main
+on: push
 
 jobs:
   sync:
