--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,8 +10,29 @@ jobs:
       - name: Checkout this repo
         uses: actions/checkout@v2.4.0
 
-      # Run GitHub Action to sync docs in `documentation` directory
-      # Page we're syncing: https://docs.readme.com/docs/rdme
+      # Let's dynamically update our docs with the latest version of rdme!
+      # Note that these next two steps are not required
+      # in order to sync your docs to ReadMe.
+
+      # First, we run a script that grabs the current version from
+      # our package.json and sets it as a GitHub Action output!
+      - name: Retrieve `rdme` version from package.json
+        id: rdme-version
+        run: ./bin/set-version-output
+
+      # Next, we use this output to do a simple find and replace!
+      - name: Find and replace version placeholders in docs
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: 'RDME_VERSION'
+          replace: ${{ steps.rdme-version.outputs.RDME_VERSION }}
+          regex: false
+          include: documentation/
+
+      # And finally, with our updated documentation,
+      # we run the `rdme` GitHub Action to sync the Markdown file
+      # in the `documentation` directory.
+      # Here's the page we're syncing: https://docs.readme.com/docs/rdme
       - name: GitHub Action
         # Use the `main` branch as ref for GitHub Action
         # Not recommended, this can break your workflows!
