--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,11 +33,11 @@ jobs:
       # we run the `rdme` GitHub Action to sync the Markdown file
       # in the `documentation` directory.
       # Here's the page we're syncing: https://docs.readme.com/docs/rdme
-      - name: GitHub Action
-        # We use the `main` branch as ref for GitHub Action
-        # This is NOT recommended, as it can break your workflows without notice!
-        # We recommend specifying a fixed version, i.e. @7.0
-        # Docs: https://docs.github.com/actions/using-workflows/workflow-syntax-for-github-actions#example-using-versioned-actions
-        uses: readmeio/rdme@main
-        with:
-          rdme: docs ./documentation --key=${{ secrets.README_PROD_PROJECT_API_KEY }} --version=2.0
+      # - name: GitHub Action
+      #   # We use the `main` branch as ref for GitHub Action
+      #   # This is NOT recommended, as it can break your workflows without notice!
+      #   # We recommend specifying a fixed version, i.e. @7.0
+      #   # Docs: https://docs.github.com/actions/using-workflows/workflow-syntax-for-github-actions#example-using-versioned-actions
+      #   uses: readmeio/rdme@main
+      #   with:
+      #     rdme: docs ./documentation --key=${{ secrets.README_PROD_PROJECT_API_KEY }} --version=2.0
