--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
-  "extends": ["@readme/eslint-config"],
+  "extends": [
+    "@readme/eslint-config",
+    "@readme/eslint-config/typescript"
+  ],
   "root": true,
   "parserOptions": {
     "ecmaVersion": 2020
@@ -10,6 +13,8 @@
      * explicitly exclude `run` from this rule.
      */
     "class-methods-use-this": ["error", { "exceptMethods": ["run"] }],
+
+    "lines-between-class-members": "off",
 
     /**
      * This is a small rule to prevent us from using console.log() statements in our commands.
