--- a/package.json
+++ b/package.json
@@ -58,19 +58,30 @@
     "update-notifier": "^5.1.0"
   },
   "devDependencies": {
-    "@readme/eslint-config": "^8.0.2",
+    "@readme/eslint-config": "^8.4.2",
     "@readme/oas-examples": "^4.3.3",
+    "@types/command-line-usage": "^5.0.2",
+    "@types/config": "^0.0.41",
+    "@types/jest": "^27.4.1",
+    "@types/node-fetch": "^2.6.1",
+    "@types/parse-link-header": "^1.0.1",
+    "@types/update-notifier": "^5.1.0",
     "eslint": "^8.3.0",
     "jest": "^27.2.0",
     "nock": "^13.1.1",
-    "prettier": "^2.4.1"
+    "prettier": "^2.5.1",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.5.5"
   },
   "scripts": {
+    "build": "tsc",
     "lint": "eslint .",
+    "prebuild": "rm -rf dist/",
+    "prepack": "npm run build",
     "pretest": "npm run lint",
     "prettier": "prettier --list-different --write \"./**/**.js\"",
     "release": "npx conventional-changelog-cli -i CHANGELOG.md -s",
-    "test": "jest --coverage"
+    "test": "tsc; jest --coverage"
   },
   "jest": {
     "coverageThreshold": {
