--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,7 +1,10 @@
 name: Sync `documentation` directory to ReadMe
 
 # Run workflow for every push to the `main` branch
-on: push
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   sync:
