--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@readme/eslint-config": "^8.0.2",
     "@readme/oas-examples": "^4.3.3",
+    "alex": "^10.0.0",
     "eslint": "^8.3.0",
     "jest": "^27.2.0",
     "nock": "^13.1.1",
@@ -66,7 +67,8 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "pretest": "npm run lint",
+    "lint-docs": "alex .",
+    "pretest": "npm run lint && npm run lint-docs",
     "prettier": "prettier --list-different --write \"./**/**.js\"",
     "release": "npx conventional-changelog-cli -i CHANGELOG.md -s",
     "test": "jest --coverage"
