--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,11 +25,14 @@ updates:
       prefix: chore(deps)
       prefix-development: chore(deps-dev)
     ignore:
-      # chalk is now an ESM package and can't be used here without a rewrite.
+      # All of these packages are now ESM-only and can't be used here without a rewrite.
       - dependency-name: chalk
         versions:
           - ">= 5"
-      # node-fetch is now an ESM package and can't be used here without a rewrite.
+      - dependency-name: configstore
+        versions:
+          - ">= 6"
       - dependency-name: node-fetch
         versions:
           - ">= 3"
+
