chore: update step name to reflect actual behavior

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,7 +19,7 @@ jobs:
 
       # First, we run a script that sets a few outputs:
       # our package version and our Node.js version.
-      - name: Retrieve `rdme` version from package.json
+      - name: Retrieve version values from package.json
         id: rdme-version
         run: ./bin/set-version-output
 
