chore(dependabot): add update-notifier to ignore list
*shakes fist at ESM*

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -38,3 +38,6 @@ updates:
       - dependency-name: ora
         versions:
           - '>= 6'
+      - dependency-name: update-notifier
+        versions:
+          - '>= 6'
