--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@actions/core": "^1.6.0",
+    "@npmcli/ci-detect": "^2.0.0",
     "chalk": "^4.1.2",
     "cli-table": "^0.3.1",
     "command-line-args": "^5.2.0",
