--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,16 @@
     "class-methods-use-this": ["error", { "exceptMethods": ["run"] }],
 
     /**
+     * Node doesn't ship ESM module resolution so we need to have file extensions on JS files that
+     * we we load.
+     *
+     * https://github.com/airbnb/javascript/issues/2030
+     */
+     "import/extensions": ["error", "ignorePackages", {
+      "js": "always"
+    }],
+
+    /**
      * This is a small rule to prevent us from using console.log() statements in our commands.
      *
      * We've had troubles in the past where our test coverage required us to use Jest mocks for
@@ -24,6 +34,15 @@
      * Furthermore, we should also be using our custom loggers (see src/lib/logger.js)
      * instead of using console.info() or console.warn() statements.
      */
-    "no-console": ["warn"]
+    "no-console": ["warn"],
+
+    /**
+     * `__dirname` isn't defined within ESM scope in Node!
+     *
+     * https://bobbyhadz.com/blog/javascript-dirname-is-not-defined-in-es-module-scope
+     */
+    "no-underscore-dangle": ["error", { "allow": ["__dirname", "__filename"] }],
+
+    "no-restricted-syntax": "off"
   }
 }
